<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="sultan_priyansh">sultan_priyansh</string>
    <string name="posts">Posts</string>
    <string name="hardcoded_post">250</string>
    <string name="hardcoded_followers">300</string>
    <string name="followers">Followers</string>
    <string name="hardcoded_following">400</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="priyansh_sultania">Priyansh Sultania</string>
    <string name="this_is_my_bio">This is my bio</string>
    <string name="https_priyanshsultania_com">https://priyanshsultania.com</string>
    <string name="options">Options</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_photo">Change Photo</string>
    <string name="private_information">Private Information</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="website">website</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="registered_signup">Registered? Signup</string>
    <string name="register">Register</string>
    <string name="register_a_new_account">Register a new account</string>
</resources>