<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:id="@+id/textViewChangePhoto"
                android:layout_below="@id/profile_photo"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"/>

            <!--Profile Name-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/textViewChangePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout1">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_profilename"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/username"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--Display Name-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout1"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_username"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/name"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--Website Name-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_website"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/website"
                    android:hint="@string/website"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <!--Description Name-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="Bio"
                    android:inputType="textNoSuggestions" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:id="@+id/textViewPrivateInfo"
                android:text="@string/private_information"
                android:textAllCaps="true"
                android:layout_below="@id/relLayout4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/grey_border_bottom" />

            <!--email section-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/textViewPrivateInfo"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout5"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextEmail"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>

            <!--phone section-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout5"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout6"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_phone"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextPhone"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="number"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</merge>