<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!--Top toolbar-->
        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <include layout="@layout/snippet_top_profilebar" />
        </RelativeLayout>
        <!--Middle Section-->
        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relLayout1"
            android:background="@drawable/white_grey_border_bottom">
            <LinearLayout
                android:id="@+id/linLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:layout_marginStart="25dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/profile_image"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">
                    <include layout="@layout/snippet_top_profile" />
                </RelativeLayout>
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/linLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/linLayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_name"
                    android:textStyle="bold"
                    android:text="@string/priyansh_sultania"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDescription"
                    android:text="@string/this_is_my_bio"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWebsite"
                    android:text="@string/https_priyanshsultania_com"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout3"
                android:layout_below="@id/linLayout2"
                android:layout_marginBottom="50dp">

                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:id="@+id/gridView"
                    android:horizontalSpacing="1dp"
                    android:verticalSpacing="1dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center" >

                </GridView>

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</merge>